--- a/templates/admin.html
+++ b/templates/admin.html
@@ -200,13 +200,10 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-						<th>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="selectAll">
-								<label for="selectAll"></label>
-							</span>
-						</th>   
+						
                         <th>Brand</th>
+                        <th>Car type</th>
+                        <th>Fuel </th>
 						<th>Model</th>
                         <th>Year</th>
                         <th>Color</th>
@@ -224,13 +221,10 @@
                 <tbody>
             {{range .Cars}}
                     <tr>
-						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox1{{.ID}}" name="options[]" value="{{.ID}}">
-								<label for="checkbox{{.ID}}"></label>
-							</span>
-						</td>
+						
                         <td>{{.Brand}}</td>
+                        <td>{{.CarType}}</td>
+                        <td>{{.FuelType}}</td>
                         <td>{{.Model}}</td>
 						<td>{{.Year}}</td>
                         <td>{{.Color}}</td>
@@ -306,7 +300,7 @@
                         </div>
                         <div class="form-group">
                             <label>Kms</label>
-                            <input type="text" name="kms" class="form-control" required>
+                            <input type="number" name="kms" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label>Ownership</label>
@@ -318,8 +312,21 @@
                         </div>
                         <div class="form-group">
                             <label>Price</label>
-                            <input type="text" name="price" class="form-control" required>
+                            <input type="number" name="price" class="form-control" required>
                         </div>
+                        <div class="form-group">
+                            <label>Car Type</label>
+                         <select name="car_type" id="carType" class="form-control" requried>
+                         </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Fuel Type</label>
+                         <select name="fuel_type" id="fuelType" class="form-control" required>
+                         </select>
+                        </div>
+
+
+                        
                         <div class="form-group">
                             <label>Banner image</label>
                             <input type="file" name="bannerimage"   accept="image/*" required>
@@ -351,7 +358,6 @@
             </div>
         </div>
     </div>
-    
     {{range .Cars}}
     <div id="editCarModal-{{.ID}}" class="modal fade">
         <div class="modal-dialog">
@@ -387,6 +393,28 @@
                             <input type="text" name="kms" value="{{.Kms}}" class="form-control" required>
                         </div>
                         <div class="form-group">
+                            <label>Car Type</label>
+                            <select name="car_type" class="form-control" required>
+                                <option value="{{.CarType}}" selected>{{.CarType}}</option>
+                                {{range $.CarTypes}}
+                                {{if ne . $.CarType}}
+                                <option value="{{.}}">{{.}}</option>
+                                {{end}}
+                                {{end}}
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Fuel Type</label>
+                            <select name="fuel_type" class="form-control" required>
+                                <option value="{{.FuelType}}" selected>{{.FuelType}}</option>
+                                {{range $.FuelTypes}}
+                                {{if ne . $.FuelType}}
+                                <option value="{{.}}">{{.}}</option>
+                                {{end}}
+                                {{end}}
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label>Ownership</label>
                             <input type="text" name="ownership" value="{{.Ownership}}" class="form-control" required>
                         </div>
@@ -396,28 +424,23 @@
                         </div>
                         <div class="form-group">
                             <label>Price</label>
-                            <input type="text" name="price"  value="{{.Price}}"  class="form-control" required>
+                            <input type="text" name="price" value="{{.Price}}" class="form-control" required>
                         </div>
                         <div class="form-group">
-                        <label>Banner Image</label>
-                        <img src="{{.Bannerimage}}" alt="Existing Banner Image" style="width: 100px; height: auto;">
-                        <input type="file" name="bannerimage" class="form-control">
+                            <label>Banner Image</label>
+                            <img src="{{.Bannerimage}}" alt="Existing Banner Image" style="width: 100px; height: auto;">
+                            <input type="file" name="bannerimage" class="form-control">
                         </div>
-
                         <div class="form-group">
                             <label>Images</label>
                             <div id="existingImages">
                                 {{range .Images}}
-                                    <img src="{{.Path}}" class="existing-image" alt="Existing Image" style="width: 100px; height: auto;">
-                                    <!-- Include a hidden input field to retain existing image paths -->
-                                    <input type="hidden" name="existing_images[]" value="{{.Path}}">
+                                <img src="{{.Path}}" class="existing-image" alt="Existing Image" style="width: 100px; height: auto;">
+                                <input type="hidden" name="existing_images[]" value="{{.Path}}">
                                 {{end}}
                             </div>
                         </div>
-
-                       
                         <div id="imagePreview-{{.ID}}" class="image-preview"></div>
-                       
                         <div class="form-group">
                             <label>RegNo</label>
                             <input type="text" name="regno" class="form-control" value="{{.RegNo}}" required>
@@ -435,8 +458,7 @@
             </div>
         </div>
     </div>
-{{end}}
-
+    {{end}}
 
 
    {{range .Cars}}
@@ -514,6 +536,44 @@
     </div>
    
     <script>
+      
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('/myapp/get_choices')
+                .then(response => response.json())
+                .then(data => {
+                    const carTypes = data.car_types;
+                    const fuelTypes = data.fuel_types;
+        
+                    const carTypeSelect = document.getElementById('carType');
+                    const fuelTypeSelect = document.getElementById('fuelType');
+        
+                    carTypes.forEach(carType => {
+                        const option = document.createElement('option');
+                        option.value = carType;
+                        option.textContent = carType;
+                        carTypeSelect.appendChild(option);
+                    });
+        
+                    fuelTypes.forEach(fuelType => {
+                        const option = document.createElement('option');
+                        option.value = fuelType;
+                        option.textContent = fuelType;
+                        fuelTypeSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching choices:', error));
+        });
+
+
+
+
+
+
+
+
+
+
+
         // Function to add a new file input
         function addImageInput() {
             const container = document.getElementById('imageInputsContainer');
