--- a/templates/admin.html
+++ b/templates/admin.html
@@ -247,7 +247,7 @@
                         </a>
                         
                         <!-- Logout Modal -->
-                        <div id="logoutModal" class="modal fade">
+                        <div id="logoutModal" class="modal fade text-black-50">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
