--- a/templates/admin.html
+++ b/templates/admin.html
@@ -78,47 +78,12 @@
             </div>
             <br>
             <br>
-            <div class="sidebar-heading" id="showform">
-                <a href="#addCarModals" data-toggle="modal"><button type="button" class="btn btn-success"> Add Youtube Video</button></a>
-            </div>
-            <div id="addCarModals" class="modal fade">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <form action="/admin/get_youtube_link_form" method="post" enctype="multipart/form-data">
-                            <div class="modal-header">                        
-                                <h4 class="modal-title">Add Youtube link</h4>
-                                
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            </div>
-                            <div class="modal-body">                    
-                                
-        
-                                
-                              
-        
-        
-        
-        
-        
-                                
-
-                                <div class="form-group">
-                                    <label>Add link</label>
-                                    <div id="Youtubelinkcontainer">
-                                        <input type="url" name="links[]" class="form-control" required>
-                                    </div>
-                                    <button type="button" id="addAnotherlink" class="btn btn-primary mt-2">Add Another Link</button>
-                                    
-                                </div>                                
-                            </div>
-                            <div class="modal-footer">
-                                <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                <input type="submit" class="btn btn-success" value="Add">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+           
+                <br>
+                <br>
+                <br>
+               <a href="/admin/get_youtube_link_form"> <button class="btn btn-dark">Show youtube links</button></a>
+           
 
 
 
