--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,47 +8,101 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-
+    <link rel="icon" href="/static/icon/rrlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/mycode.css">
-<style>
 
+    <title>Amanimotors login</title>
 
+    <style>
+        @keyframes zigzag {
+            0% {
+                transform: translateX(-100%);
+                opacity: 0;
+            }
+            25% {
+                transform: translateX(25%);
+                opacity: 0.25;
+            }
+            50% {
+                transform: translateX(50%);
+                opacity: 0.5;
+            }
+            75% {
+                transform: translateX(75%);
+                opacity: 0.75;
+            }
+            100% {
+                transform: translateX(100%);
+                opacity: 1;
+            }
+        }
 
-</style>
-    <title>Hello, world!</title>
-  </head>
-  <body>
+        .zigzag-text {
+            animation: zigzag 8s linear infinite;
+            text-align: center;
+            font-size: 24px;
+            color: white;
+            margin-bottom: 20px;
+        }
+
+        .ring {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        .login {
+            position: relative;
+            z-index: 1;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            color: #fff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
     <!-- animated login form div starts here -->
     <div class="ring">
-      <i style="--clr:#610979;"></i>
-      <i style="--clr:#fc466b;"></i>
-      <i style="--clr:#3f5efb;"></i>
-      <div class="login">
-          <form action="/adminlogin" method="post" enctype="multipart/form-data">
-              <h2>Login</h2>
-              <div class="inputBx">
-                  <input type="text" name="username" placeholder="Username" required>
-              </div>
-              <div class="inputBx">
+        <h1 class="zigzag-text">Welcome to Amani Motors Login Page</h1>
+        <i style="--clr:#610979;"></i>
+        <i style="--clr:#fc466b;"></i>
+        <i style="--clr:#3f5efb;"></i>
+        <div class="login">
+            <form action="/adminlogin" method="post" enctype="multipart/form-data">
+                <h2 style="text-align:center">login</h2>
+                <div class="inputBx">
+                    <input type="text" name="username" placeholder="Username" required>
+                </div>
+                <div class="inputBx">
+                    <br>
+                    <br>
+                    <input type="password" name="password" placeholder="Password" required>
+                </div>
                 <br>
                 <br>
-                  <input type="password" name="password" placeholder="Password" required>
-              </div>
-              <br>
-                <br>
-              <div class="inputBx">
-                  <input type="submit" value="Login">
-              </div>
-          </form>
-      </div>
-  </div>
-
-<!-- animated login dev end here -->
+                <div class="inputBx">
+                    <input type="submit" value="Login" class="btn btn-primary">
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- animated login dev end here -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
