--- a/templates/admin.html
+++ b/templates/admin.html
@@ -378,11 +378,11 @@
                         </div>
                         <div class="form-group">
                             <label>Ownership</label>
-                            <input type="text" name="ownership" class="form-control" required>
+                            <input type="text" placeholder="eg:1,2" name="ownership" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label>Transmission</label>
-                            <input type="text" name="transmission" class="form-control" required>
+                            <input type="number" name="transmission" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label>Price</label>
